--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,41 +1,45 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+@import url('index.css');
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/** DesktopsLayout */
+@media screen and (width >= 925px) {
+  html, body {
+    margin: 0%; padding: 0%;
+    width: 100%;
+    height: 100%;
   }
-  to {
-    transform: rotate(360deg);
+
+  main{
+    padding: 2%;
+    background-color: darkorange;
   }
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+
+/** TabletLayout */
+@media (min-width: 600px) and (max-width: 924px) {
+  html, body{
+      height: 100vh;
   }
+  
+  html, body, header, main, footer{
+      margin: 0% 0%;
+      width: 100%;
+  }
+
 }
 
-.card {
-  padding: 2em;
-}
 
-.read-the-docs {
-  color: #888;
+/** MobilesLayout */
+@media screen and (width <= 600px) {
+  html, body{
+      margin: 0px 0px;
+      height: 100%;
+  }
+  
+  html, body, header, main, footer{
+      margin: 0% 0%;
+      width: 100%;
+  }
+
 }
