--- a/front/src/App.css
+++ b/front/src/App.css
@@ -4,13 +4,32 @@
 @media screen and (width >= 925px) {
   html, body {
     margin: 0%; padding: 0%;
+    width: 100%; height: 100%;
+  }
+
+  header, main, footer{
+    margin: 0%; padding: 2%;
     width: 100%;
-    height: 100%;
+    color: black;
+  }
+
+  header, footer{
+    
+  }
+
+  body{
+    color: black;
+  }
+  header{
+
   }
 
   main{
-    padding: 2%;
     background-color: darkorange;
+  }
+
+  footer{
+
   }
 
 }
@@ -19,12 +38,33 @@
 /** TabletLayout */
 @media (min-width: 600px) and (max-width: 924px) {
   html, body{
-      height: 100vh;
+    margin: 0%; padding: 0%;
+    width: 100%; height: 100%;
   }
   
-  html, body, header, main, footer{
-      margin: 0% 0%;
-      width: 100%;
+  header, main, footer{
+    margin: 0%; padding: 2%;
+    width: 100%;
+  }
+
+  header, footer{
+    
+  }
+
+  body{
+    
+  }
+
+  header{
+
+  }
+
+  main{
+    background-color: darkorange;
+  }
+
+  footer{
+
   }
 
 }
@@ -33,13 +73,33 @@
 /** MobilesLayout */
 @media screen and (width <= 600px) {
   html, body{
-      margin: 0px 0px;
+      margin: 0%; padding: 0%;
       height: 100%;
   }
   
-  html, body, header, main, footer{
-      margin: 0% 0%;
-      width: 100%;
+  header, main, footer{
+    margin: 0%; padding: 2%;
+    width: 100%;
+  }
+
+  header, footer{
+    
+  }
+
+  body{
+    
+  }
+
+  header{
+
+  }
+
+  main{
+    background-color: darkorange;
+  }
+
+  footer{
+
   }
 
 }
