--- a/front/src/components/AppFooter.css
+++ b/front/src/components/AppFooter.css
@@ -1,7 +1,7 @@
 footer{
     display: flex;
     margin: 0%; padding: 1%;
-    background-color: brown; color: white;
+    background-color: brown;
     width: 100%; height: 12%;
 }
 
