--- a/front/src/components/AppFooter.css
+++ b/front/src/components/AppFooter.css
@@ -1,6 +1,8 @@
 footer{
     display: flex;
     margin: 0%; padding: 1%;
+    /* background-color: brown; color: white; */
+    background-color: #caede3 ;
     background-color: brown;
     width: 100%; height: 12%;
 }
