--- a/front/src/components/AppHeader.css
+++ b/front/src/components/AppHeader.css
@@ -1,7 +1,8 @@
 header{
     display: flex;
     margin: 0%; padding: 1%;
-    background-color: brown;
+    /* background-color: brown; */
+    background-color: #caede3 ;
     width: 100%; height: 15%;
 }
 
