Updates : couleur Footer

--- a/front/src/components/AppFooter.css
+++ b/front/src/components/AppFooter.css
@@ -3,7 +3,7 @@ footer{
     margin: 0%; padding: 1%;
     /* background-color: brown; color: white; */
     background-color: #caede3 ;
-    background-color: brown;
+    /* background-color: brown; */
     width: 100%; height: 12%;
 }
 
